# coinpricesProject

./: LICENSE  README.md  pyproject.toml
src/: dash.py  funcs.py  main.py
