[tool.poetry]
name = "coinpricesproject"
version = "0.1.0"
description = ""
authors = ["Jownao <johnnywsevero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
requests = "^2.32.3"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
streamlit = "^1.38.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
plotly = "^5.24.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
